Added Fire Behavior Model section and began Fuel Model Definitions subsection

--- a/org/Pyretechnics.org
+++ b/org/Pyretechnics.org
@@ -527,6 +527,7 @@ The ~grow_fire~ function takes a single =world_state= dictionary as input with t
 
   *TODO*: Determine whether rectangular cells will work for the GridFire and ELMFIRE spread algorithms. If not, eliminate this degree of freedom from the API.
   *TODO*: Add interpolation options to the gridded data source class
+  *TODO*: simulation_north_angle may be dropped if we require inputs to use North-up projections for both fuels and weather
 
   |---------------------------+-----------------------------+-------------------------------------------------------------------------------------------+-----------+---------|
   | Parameter Name            | Type                        | Units                                                                                     | Optional? | Default |
@@ -1012,3 +1013,162 @@ The following table contains the current mapping from ELMFIRE parameters to Pyre
 | DUMP_SPREAD_RATE                         | N/A                                   | Output writing managed externally       |
 | DUMP_TIME_OF_ARRIVAL                     | N/A                                   | Output writing managed externally       |
 |------------------------------------------+---------------------------------------+-----------------------------------------|
+
+* Fire Behavior Model
+
+Pyretechnics implements the following fire behavior formulas from the
+fire science literature:
+
+- Surface Fire Spread: Rothermel 1972 with FIREMODS adjustments from Albini 1976
+- Crown Fire Initiation: Van Wagner 1977
+- Passive/Active Crown Fire Spread: Cruz 2005
+- Flame Length and Fire Line Intensity: Byram 1959
+- Midflame Wind Adjustment Factor: Albini & Baughman 1979 parameterized as in BehavePlus, FARSITE, FlamMap, FSPro, and FPA according to Andrews 2012\nocite{Albini1979,Andrews2012}
+- Fire Spread on a Raster Grid: Morais 2001 (method of adaptive timesteps and fractional distances)
+- Spot Fire: Perryman 2013
+
+The following fuel models are supported:
+
+- Anderson 13: no dynamic loading
+- Scott & Burgan 40: dynamic loading implemented according to Scott & Burgan 2005
+
+In the following sections, we describe the operation of this system in
+detail.
+
+** Fuel Model Definitions
+
+All fires ignite and travel through some form of burnable fuel.
+Although the effects of wind and slope on the rate of fire spread can
+be quite pronounced, its fundamental thermodynamic characteristics are
+largely determined by the fuel type in which it is sustained. For
+wildfires, these fuels are predominantly herbaceous and woody
+vegetation (both alive and dead) as well as decomposing elements of
+dead vegetation, such as duff or leaf litter. To estimate the heat
+output and rate of spread of a fire burning through any of these
+fuels, we must determine those physical properties that affect heat
+absorption and release.
+
+Of course, measuring these fuel properties for every kind of
+vegetation that may be burned in a wildfire is an intractable task. To
+cope with this, fuels are classified into categories called ``fuel
+models'' which share similar burning characteristics. Each fuel model
+is then assigned a set of representative values for each of the
+thermally relevant physical properties shown in Table
+[[tab:fuel-model-properties]].
+
+#+NAME: tab:fuel-model-properties
+#+CAPTION: Physical properties assigned to each fuel model
+#+ATTR_LATEX: :align |l|l|l| :font \small
+|----------+--------------------------------------------+-----------------------------------------|
+| Property | Description                                | Units                                   |
+|----------+--------------------------------------------+-----------------------------------------|
+| \delta   | fuel depth                                 | ft                                      |
+| w_{o}    | ovendry fuel loading                       | lb/ft^{2}                               |
+| \sigma   | fuel particle surface-area-to-volume ratio | ft^{2}/ft^{3}                           |
+| M_{x}    | moisture content of extinction             | lb moisture/lb ovendry wood             |
+| h        | fuel particle low heat content             | Btu/lb                                  |
+| \rho_{p} | ovendry particle density                   | lb/ft^{3}                               |
+| S_{T}    | fuel particle total mineral content        | lb minerals/lb ovendry wood             |
+| S_{e}    | fuel particle effective mineral content    | lb silica-free minerals/lb ovendry wood |
+| M_{f}    | fuel particle moisture content             | lb moisture/lb ovendry wood             |
+|----------+--------------------------------------------+-----------------------------------------|
+
+TODO: Change units to metric in the table above.
+
+*Note:* While M_{f} is not, in fact, directly assigned to any of these
+fuel models, their definitions remain incomplete for the purposes of
+fire spread modelling (particularly those reliant on the curing
+formulas of dynamic fuel loading) until it is provided as a
+characteristic of local weather conditions.
+
+The fuel models supported by Pyretechnics include the standard 13 fuel
+models of Rothermel, Albini, and Anderson\citep{Anderson1982} and the
+additional 40 fuel models defined by Scott and
+Burgan\citep{Scott2005}. These are all concisely encoded in an
+internal data structure, which may be updated to include additional
+custom fuel models desired by the user.
+
+#+name: fuel-model-definitions
+#+begin_src python :tangle ../src/pyretechnics/fuel_models.py
+# Lookup table including one entry for each of the Anderson 13 and
+# Scott & Burgan 40 fuel models. The fields have the following
+# meanings:
+# {fuel-model-number
+#  [name delta M_x-dead h
+#   [w_o-dead-1hr w_o-dead-10hr w_o-dead-100hr w_o-live-herbaceous w_o-live-woody]
+#   [sigma-dead-1hr sigma-dead-10hr sigma-dead-100hr sigma-live-herbaceous sigma-live-woody]]
+# }
+fuel_models = {
+    # Anderson 13:
+    # Grass and Grass-dominated (short-grass,timber-grass-and-understory,tall-grass)
+    1   : ["R01", 1.0, 12, 8, [0.0340, 0.0000, 0.0000, 0.0000, 0.0000], [3500.0,   0.0,  0.0,    0.0,    0.0]],
+    2   : ["R02", 1.0, 15, 8, [0.0920, 0.0460, 0.0230, 0.0230, 0.0000], [3000.0, 109.0, 30.0, 1500.0,    0.0]],
+    3   : ["R03", 2.5, 25, 8, [0.1380, 0.0000, 0.0000, 0.0000, 0.0000], [1500.0,   0.0,  0.0,    0.0,    0.0]],
+    # Chaparral and Shrubfields (chaparral,brush,dormant-brush-hardwood-slash,southern-rough)
+    4   : ["R04", 6.0, 20, 8, [0.2300, 0.1840, 0.0920, 0.2300, 0.0000], [2000.0, 109.0, 30.0, 1500.0,    0.0]],
+    5   : ["R05", 2.0, 20, 8, [0.0460, 0.0230, 0.0000, 0.0920, 0.0000], [2000.0, 109.0,  0.0, 1500.0,    0.0]],
+    6   : ["R06", 2.5, 25, 8, [0.0690, 0.1150, 0.0920, 0.0000, 0.0000], [1750.0, 109.0, 30.0,    0.0,    0.0]],
+    7   : ["R07", 2.5, 40, 8, [0.0520, 0.0860, 0.0690, 0.0170, 0.0000], [1750.0, 109.0, 30.0, 1550.0,    0.0]],
+    # Timber Litter (closed-timber-litter,hardwood-litter,timber-litter-and-understory)
+    8   : ["R08", 0.2, 30, 8, [0.0690, 0.0460, 0.1150, 0.0000, 0.0000], [2000.0, 109.0, 30.0,    0.0,    0.0]],
+    9   : ["R09", 0.2, 25, 8, [0.1340, 0.0190, 0.0070, 0.0000, 0.0000], [2500.0, 109.0, 30.0,    0.0,    0.0]],
+    10  : ["R10", 1.0, 25, 8, [0.1380, 0.0920, 0.2300, 0.0920, 0.0000], [2000.0, 109.0, 30.0, 1500.0,    0.0]],
+    # Logging Slash (light-logging-slash,medium-logging-slash,heavy-logging-slash)
+    11  : ["R11", 1.0, 15, 8, [0.0690, 0.2070, 0.2530, 0.0000, 0.0000], [1500.0, 109.0, 30.0,    0.0,    0.0]],
+    12  : ["R12", 2.3, 20, 8, [0.1840, 0.6440, 0.7590, 0.0000, 0.0000], [1500.0, 109.0, 30.0,    0.0,    0.0]],
+    13  : ["R13", 3.0, 25, 8, [0.3220, 1.0580, 1.2880, 0.0000, 0.0000], [1500.0, 109.0, 30.0,    0.0,    0.0]],
+    # Nonburnable (NB)
+    91  : ["NB1", 0.0,  0, 0, [0.0000, 0.0000, 0.0000, 0.0000, 0.0000], [   0.0,   0.0,  0.0,    0.0,    0.0]],
+    92  : ["NB2", 0.0,  0, 0, [0.0000, 0.0000, 0.0000, 0.0000, 0.0000], [   0.0,   0.0,  0.0,    0.0,    0.0]],
+    93  : ["NB3", 0.0,  0, 0, [0.0000, 0.0000, 0.0000, 0.0000, 0.0000], [   0.0,   0.0,  0.0,    0.0,    0.0]],
+    98  : ["NB4", 0.0,  0, 0, [0.0000, 0.0000, 0.0000, 0.0000, 0.0000], [   0.0,   0.0,  0.0,    0.0,    0.0]],
+    99  : ["NB5", 0.0,  0, 0, [0.0000, 0.0000, 0.0000, 0.0000, 0.0000], [   0.0,   0.0,  0.0,    0.0,    0.0]],
+    # Scott & Burgan 40:
+    # Grass (GR)
+    101 : ["GR1", 0.4, 15, 8, [0.0046, 0.0000, 0.0000, 0.0138, 0.0000], [2200.0, 109.0, 30.0, 2000.0,    0.0]],
+    102 : ["GR2", 1.0, 15, 8, [0.0046, 0.0000, 0.0000, 0.0459, 0.0000], [2000.0, 109.0, 30.0, 1800.0,    0.0]],
+    103 : ["GR3", 2.0, 30, 8, [0.0046, 0.0184, 0.0000, 0.0689, 0.0000], [1500.0, 109.0, 30.0, 1300.0,    0.0]],
+    104 : ["GR4", 2.0, 15, 8, [0.0115, 0.0000, 0.0000, 0.0872, 0.0000], [2000.0, 109.0, 30.0, 1800.0,    0.0]],
+    105 : ["GR5", 1.5, 40, 8, [0.0184, 0.0000, 0.0000, 0.1148, 0.0000], [1800.0, 109.0, 30.0, 1600.0,    0.0]],
+    106 : ["GR6", 1.5, 40, 9, [0.0046, 0.0000, 0.0000, 0.1561, 0.0000], [2200.0, 109.0, 30.0, 2000.0,    0.0]],
+    107 : ["GR7", 3.0, 15, 8, [0.0459, 0.0000, 0.0000, 0.2479, 0.0000], [2000.0, 109.0, 30.0, 1800.0,    0.0]],
+    108 : ["GR8", 4.0, 30, 8, [0.0230, 0.0459, 0.0000, 0.3352, 0.0000], [1500.0, 109.0, 30.0, 1300.0,    0.0]],
+    109 : ["GR9", 5.0, 40, 8, [0.0459, 0.0459, 0.0000, 0.4132, 0.0000], [1800.0, 109.0, 30.0, 1600.0,    0.0]],
+    # Grass-Shrub (GS)
+    121 : ["GS1", 0.9, 15, 8, [0.0092, 0.0000, 0.0000, 0.0230, 0.0298], [2000.0, 109.0, 30.0, 1800.0, 1800.0]],
+    122 : ["GS2", 1.5, 15, 8, [0.0230, 0.0230, 0.0000, 0.0275, 0.0459], [2000.0, 109.0, 30.0, 1800.0, 1800.0]],
+    123 : ["GS3", 1.8, 40, 8, [0.0138, 0.0115, 0.0000, 0.0666, 0.0574], [1800.0, 109.0, 30.0, 1600.0, 1600.0]],
+    124 : ["GS4", 2.1, 40, 8, [0.0872, 0.0138, 0.0046, 0.1561, 0.3260], [1800.0, 109.0, 30.0, 1600.0, 1600.0]],
+    # Shrub (SH)
+    141 : ["SH1", 1.0, 15, 8, [0.0115, 0.0115, 0.0000, 0.0069, 0.0597], [2000.0, 109.0, 30.0, 1800.0, 1600.0]],
+    142 : ["SH2", 1.0, 15, 8, [0.0620, 0.1102, 0.0344, 0.0000, 0.1768], [2000.0, 109.0, 30.0,    0.0, 1600.0]],
+    143 : ["SH3", 2.4, 40, 8, [0.0207, 0.1377, 0.0000, 0.0000, 0.2847], [1600.0, 109.0, 30.0,    0.0, 1400.0]],
+    144 : ["SH4", 3.0, 30, 8, [0.0390, 0.0528, 0.0092, 0.0000, 0.1171], [2000.0, 109.0, 30.0, 1800.0, 1600.0]],
+    145 : ["SH5", 6.0, 15, 8, [0.1653, 0.0964, 0.0000, 0.0000, 0.1331], [ 750.0, 109.0, 30.0,    0.0, 1600.0]],
+    146 : ["SH6", 2.0, 30, 8, [0.1331, 0.0666, 0.0000, 0.0000, 0.0643], [ 750.0, 109.0, 30.0,    0.0, 1600.0]],
+    147 : ["SH7", 6.0, 15, 8, [0.1607, 0.2433, 0.1010, 0.0000, 0.1561], [ 750.0, 109.0, 30.0,    0.0, 1600.0]],
+    148 : ["SH8", 3.0, 40, 8, [0.0941, 0.1561, 0.0390, 0.0000, 0.1997], [ 750.0, 109.0, 30.0,    0.0, 1600.0]],
+    149 : ["SH9", 4.4, 40, 8, [0.2066, 0.1125, 0.0000, 0.0712, 0.3214], [ 750.0, 109.0, 30.0, 1800.0, 1500.0]],
+    # Timber-Understory (TU)
+    161 : ["TU1", 0.6, 20, 8, [0.0092, 0.0413, 0.0689, 0.0092, 0.0413], [2000.0, 109.0, 30.0, 1800.0, 1600.0]],
+    162 : ["TU2", 1.0, 30, 8, [0.0436, 0.0826, 0.0574, 0.0000, 0.0092], [2000.0, 109.0, 30.0,    0.0, 1600.0]],
+    163 : ["TU3", 1.3, 30, 8, [0.0505, 0.0069, 0.0115, 0.0298, 0.0505], [1800.0, 109.0, 30.0, 1600.0, 1400.0]],
+    164 : ["TU4", 0.5, 12, 8, [0.2066, 0.0000, 0.0000, 0.0000, 0.0918], [2300.0, 109.0, 30.0,    0.0, 2000.0]],
+    165 : ["TU5", 1.0, 25, 8, [0.1837, 0.1837, 0.1377, 0.0000, 0.1377], [1500.0, 109.0, 30.0,    0.0,  750.0]],
+    # Timber Litter (TL)
+    181 : ["TL1", 0.2, 30, 8, [0.0459, 0.1010, 0.1653, 0.0000, 0.0000], [2000.0, 109.0, 30.0,    0.0,    0.0]],
+    182 : ["TL2", 0.2, 25, 8, [0.0643, 0.1056, 0.1010, 0.0000, 0.0000], [2000.0, 109.0, 30.0,    0.0,    0.0]],
+    183 : ["TL3", 0.3, 20, 8, [0.0230, 0.1010, 0.1286, 0.0000, 0.0000], [2000.0, 109.0, 30.0,    0.0,    0.0]],
+    184 : ["TL4", 0.4, 25, 8, [0.0230, 0.0689, 0.1928, 0.0000, 0.0000], [2000.0, 109.0, 30.0,    0.0,    0.0]],
+    185 : ["TL5", 0.6, 25, 8, [0.0528, 0.1148, 0.2020, 0.0000, 0.0000], [2000.0, 109.0, 30.0,    0.0, 1600.0]],
+    186 : ["TL6", 0.3, 25, 8, [0.1102, 0.0551, 0.0551, 0.0000, 0.0000], [2000.0, 109.0, 30.0,    0.0,    0.0]],
+    187 : ["TL7", 0.4, 25, 8, [0.0138, 0.0643, 0.3719, 0.0000, 0.0000], [2000.0, 109.0, 30.0,    0.0,    0.0]],
+    188 : ["TL8", 0.3, 35, 8, [0.2663, 0.0643, 0.0505, 0.0000, 0.0000], [1800.0, 109.0, 30.0,    0.0,    0.0]],
+    189 : ["TL9", 0.6, 35, 8, [0.3053, 0.1515, 0.1905, 0.0000, 0.0000], [1800.0, 109.0, 30.0,    0.0, 1600.0]],
+    # Slash-Blowdown (SB)
+    201 : ["SB1", 1.0, 25, 8, [0.0689, 0.1377, 0.5051, 0.0000, 0.0000], [2000.0, 109.0, 30.0,    0.0,    0.0]],
+    202 : ["SB2", 1.0, 25, 8, [0.2066, 0.1951, 0.1837, 0.0000, 0.0000], [2000.0, 109.0, 30.0,    0.0,    0.0]],
+    203 : ["SB3", 1.2, 25, 8, [0.2525, 0.1263, 0.1377, 0.0000, 0.0000], [2000.0, 109.0, 30.0,    0.0,    0.0]],
+    204 : ["SB4", 2.7, 25, 8, [0.2410, 0.1607, 0.2410, 0.0000, 0.0000], [2000.0, 109.0, 30.0,    0.0,    0.0]],
+}
+#+end_src
