--- a/org/Pyretechnics.org
+++ b/org/Pyretechnics.org
@@ -62,7 +62,7 @@ minimum required versions and URLs from which they may be downloaded.
 |--------+---------+-----------------------------------|
 | Name   | Version | URL                               |
 |--------+---------+-----------------------------------|
-| Python | 3.x     | https://www.python.org/downloads/ |
+| Python | 3.10+   | https://www.python.org/downloads/ |
 | Numpy  | LATEST  | https://numpy.org/                |
 |--------+---------+-----------------------------------|
 
@@ -1712,8 +1712,264 @@ def wind_adjustment_factor(fuel_bed_depth, canopy_height, canopy_cover):
         return 0.0
 #+end_src
 
+The midflame wind speed that would be required to produce the combined
+spread rate in a no-slope scenario is termed the effective windspeed
+$U_{\textrm{eff}}$. Following the recommendations given in Appendix
+III of Albini 1976, these midflame wind speeds are all limited to $0.9
+I_{R}$.\citep{Albini1976}
+
+Next, the effective wind speed is used to compute the length to width
+ratio $\frac{L}{W}$ of an ellipse that approximates the fire front
+using equation 9 from Rothermel 1991.\citep{Rothermel1991} This length
+to width ratio is then converted into an eccentricity measure of the
+ellipse using equation 8 from Albini and Chase 1980.\citep{Albini1980}
+Finally, this eccentricity $E$ is used to project the maximum spread
+rate to any point along the fire front. Here are the formulas used:
+
+\begin{align*}
+  \frac{L}{W} &= 1 + 0.002840909 \, U_{\textrm{eff}} \\
+  E &= \frac{\sqrt{(\frac{L}{W})^{2} - 1}}{\frac{L}{W}} \\
+  R_{\theta} &= R_{\max}\left(\frac{1-E}{1-E\cos\theta}\right)
+\end{align*}
+
+where \theta is the angular offset from the direction of maximum fire
+spread, R_{max} is the maximum spread rate, and R_{\theta} is the
+spread rate in direction \theta.
+
+*Note:* The coefficient 0.002840909 in the $\frac{L}{W}$ formula is in
+units of min/ft. The original equation from Rothermel 1991 used 0.25
+in units of hr/mi, so this was converted to match Pyretechnic's use of
+ft/min for $U_{\textrm{eff}}$.
+
+#+name: rothermel-surface-fire-spread-max-and-any
+#+begin_src python :tangle ../src/pyretechnics/surface_fire.py
+from math import sin, cos, asin
+from conversion import deg2rad, rad2deg
+
+def almost_zero(x):
+    return abs(x) < 0.000001
 
 
-# from conversion import deg2rad, rad2deg
+def scale_spread_to_max_wind_speed(spread_properties, spread_rate, max_wind_speed, phi_max):
+    """
+    Warning: Mutates spread_properties
+    """
+    effective_wind_speed = spread_properties["effective_wind_speed"]
+    if (effective_wind_speed > max_wind_speed):
+        spread_properties["max_spread_rate"]      = spread_rate * (1.0 + phi_max)
+        spread_properties["effective_wind_speed"] = max_wind_speed
+        return spread_properties
+    else:
+        return spread_properties
 
 
+def add_eccentricity(spread_properties):
+    """
+    Warning: Mutates spread_properties
+    """
+    effective_wind_speed = spread_properties["effective_wind_speed"]
+    length_width_ratio   = 1.0 + 0.002840909 * effective_wind_speed
+    eccentricity         = sqrt((length_width_ratio ** 2.0) - 1.0) / length_width_ratio
+    spread_properties["eccentricity"] = eccentricity
+    return spread_properties
+
+
+def smallest_angle_between(theta1, theta2):
+  """
+  Computes the absolute difference between two angles as an angle between 0° and 180°.
+  The return angle has the same cosine as (- theta1 theta2) but may have an opposite sine.
+  """
+  angle = abs(theta1 - theta2)
+  return (360.0 - angle) if (angle > 180.0) else angle
+
+
+def determine_spread_drivers(midflame_wind_speed, wind_to_direction, slope, slope_direction):
+    if almost_zero(slope):
+        if almost_zero(midflame_wind_speed):
+            return "no_wind_no_slope"
+        else:
+            return "wind_only"
+    elif almost_zero(midflame_wind_speed):
+        return "slope_only"
+    elif smallest_angle_between(wind_to_direction, slope_direction) < 15.0:
+        return "wind_blows_upslope"
+    else:
+        return "wind_blows_across_slope"
+
+
+def spread_info_max_no_wind_no_slope(spread_rate):
+    return {
+        "max_spread_rate"     : spread_rate,
+        "max_spread_direction": 0.0,
+        "effective_wind_speed": 0.0,
+        "eccentricity"        : 0.0,
+    }
+
+
+def spread_info_max_wind_only(spread_rate, phi_W, midflame_wind_speed, wind_to_direction):
+    return {
+        "max_spread_rate"     : spread_rate * (1.0 + phi_W),
+        "max_spread_direction": wind_to_direction,
+        "effective_wind_speed": midflame_wind_speed,
+        "eccentricity"        : 0.0,
+    }
+
+
+def spread_info_max_slope_only(spread_rate, phi_S, slope_direction, get_wind_speed):
+    return {
+        "max_spread_rate"     : spread_rate * (1.0 + phi_S),
+        "max_spread_direction": slope_direction,
+        "effective_wind_speed": get_wind_speed(phi_S),
+        "eccentricity"        : 0.0,
+    }
+
+
+def spread_info_max_wind_blows_upslope(spread_rate, phi_combined, slope_direction, get_wind_speed):
+    return {
+        "max_spread_rate"     : spread_rate * (1.0 + phi_combined),
+        "max_spread_direction": slope_direction,
+        "effective_wind_speed": get_wind_speed(phi_combined),
+        "eccentricity"        : 0.0,
+    }
+
+
+def get_offset_prime(x, y, offset):
+    if (x >= 0.0):
+        if (y >= 0.0):
+            return offset
+        else:
+            return 360.0 - offset
+    elif (y >= 0.0):
+        return 180.0 - offset
+    else:
+        return 180.0 + offset
+
+
+def spread_info_max_wind_blows_across_slope(spread_rate, phi_W, phi_S, wind_to_direction,
+                                            slope_direction, get_wind_speed):
+    wind_magnitude     = spread_rate * phi_W
+    slope_magnitude    = spread_rate * phi_S
+    difference_angle   = deg2rad((wind_to_direction - slope_direction) % 360.0)
+    x                  = slope_magnitude + wind_magnitude * cos(difference_angle)
+    y                  = wind_magnitude * sin(difference_angle)
+    combined_magnitude = sqrt(x * x + y * y)
+    if almost_zero(combined_magnitude):
+        return {
+            "max_spread_rate"     : spread_rate,
+            "max_spread_direction": 0.0,
+            "effective_wind_speed": 0.0,
+            "eccentricity"        : 0.0,
+        }
+    else:
+        max_spread_rate      = spread_rate + combined_magnitude
+        phi_combined         = (max_spread_rate / spread_rate) - 1.0
+        offset               = rad2deg(asin(abs(y) / combined_magnitude))
+        offset_prime         = get_offset_prime(x, y, offset)
+        max_spread_direction = (slope_direction + offset_prime) % 360.0
+        effective_wind_speed = get_wind_speed(phi_combined)
+        return {
+            "max_spread_rate"     : max_spread_rate,
+            "max_spread_direction": max_spread_direction,
+            "effective_wind_speed": effective_wind_speed,
+            "eccentricity"        : 0.0,
+        }
+
+
+def get_spread_info_max(spread_drivers, spread_rate, phi_W, phi_S, midflame_wind_speed,
+                        wind_to_direction, slope_direction, get_wind_speed):
+    match spread_drivers:
+        case "no_wind_no_slope":
+            return spread_info_max_no_wind_no_slope(spread_rate)
+        case "wind_only":
+            return spread_info_max_wind_only(spread_rate, phi_W, midflame_wind_speed, wind_to_direction)
+        case "slope_only":
+            return spread_info_max_slope_only(spread_rate, phi_S, slope_direction, get_wind_speed)
+        case "wind_blows_upslope":
+            return spread_info_max_wind_blows_upslope(spread_rate, (phi_W + phi_S), slope_direction, get_wind_speed)
+        case "wind_blows_across_slope":
+            return spread_info_max_wind_blows_across_slope(spread_rate, phi_W, phi_S, wind_to_direction,
+                                                           slope_direction, get_wind_speed)
+
+
+# NOTE: No longer takes ellipse_adjustment_factor parameter
+def rothermel_surface_fire_spread_max(surface_fire_min, midflame_wind_speed, wind_from_direction,
+                                      slope, aspect, spread_rate_adjustment=1.0):
+    spread_rate        = surface_fire_min["unadj_spread_rate"] * spread_rate_adjustment
+    reaction_intensity = surface_fire_min["reaction_intensity"]
+    get_phi_S          = surface_fire_min["get_phi_S"]
+    get_phi_W          = surface_fire_min["get_phi_W"]
+    get_wind_speed     = surface_fire_min["get_wind_speed"]
+    slope_direction    = (aspect + 180.0) % 360.0
+    wind_to_direction  = (wind_from_direction + 180.0) % 360.0
+    max_wind_speed     = 0.9 * reaction_intensity
+    phi_S              = get_phi_S(slope)
+    phi_W              = get_phi_W(midflame_wind_speed)
+    phi_max            = get_phi_W(max_wind_speed)
+    spread_drivers     = determine_spread_drivers(midflame_wind_speed, wind_to_direction, slope, slope_direction)
+    spread_info_max    = get_spread_info_max(spread_drivers, spread_rate, phi_W, phi_S, midflame_wind_speed,
+                                             wind_to_direction, slope_direction, get_wind_speed)
+    return add_eccentricity(scale_spread_to_max_wind_speed(spread_info_max, spread_rate, max_wind_speed, phi_max))
+
+
+def compute_spread_rate(max_spread_rate, max_spread_direction, eccentricity, spread_direction):
+    theta = smallest_angle_between(max_spread_direction, spread_direction)
+    if almost_zero(eccentricity) or almost_zero(theta):
+        return max_spread_rate
+    else:
+        return max_spread_rate * (1.0 - eccentricity) / (1.0 - eccentricity * cos(deg2rad(theta)))
+#+end_src
+
+Using these surface fire spread rate and reaction intensity values, we
+next calculate fire intensity values by applying Anderson's flame
+depth formula and Byram's fire line intensity and flame length
+equations as described below.\citep{Anderson1969,Byram1959}
+
+\begin{align*}
+  t &= \frac{384}{\sigma} \\
+  D &= Rt \\
+  I &= \frac{I_{R}D}{60} \\
+  L &= 0.45(I)^{0.46}
+\end{align*}
+
+where $\sigma$ is the weighted sum by size class of the fuel model's
+surface area to volume ratio in ft^{2}/ft^{3}, $t$ is the residence
+time in minutes, $R$ is the surface fire spread rate in ft/min, $D$ is
+the flame depth in ft, $I_{R}$ is the reaction intensity in
+Btu/ft^{2}/min, $I$ is the fire line intensity in Btu/ft/s, and $L$ is
+the flame length in ft.
+
+#+name: surface-fire-intensity-formulas
+#+begin_src python :tangle ../src/pyretechnics/surface_fire.py
+def anderson_flame_depth(spread_rate, residence_time):
+    """
+    Returns the depth, or front-to-back distance, of the actively flaming zone
+    of a free-spreading fire in ft given:
+    - spread-rate (ft/min) orthogonal to the fire line.
+    - residence-time (min)
+    """
+    return spread_rate * residence_time
+
+
+def byram_fire_line_intensity(reaction_intensity, flame_depth):
+    """
+    Returns the rate of heat release per unit of fire edge in Btu/ft*s given:
+    - reaction-intensity (Btu/ft^2*min)
+    - flame-depth (ft)
+    """
+    return (reaction_intensity * flame_depth) / 60.0
+
+
+def byram_flame_length(fire_line_intensity):
+    """
+    Returns the average flame length in ft given:
+    - fire-line-intensity (Btu/ft*s)
+    """
+    return 0.45 * (fire_line_intensity ** 0.46)
+#+end_src
+
+This concludes our coverage of the surface fire behavior equations
+implemented in Pyretechnics. In Section [[Fire Spread on a Raster Grid]],
+these formulas will be translated from one-dimension to
+two-dimensional spread on a raster grid. Before we move on to that,
+however, the following section explains how crown fire behavior
+metrics are incorporated into our model.
