--- a/org/Pyretechnics.org
+++ b/org/Pyretechnics.org
@@ -1973,3 +1973,176 @@ these formulas will be translated from one-dimension to
 two-dimensional spread on a raster grid. Before we move on to that,
 however, the following section explains how crown fire behavior
 metrics are incorporated into our model.
+
+** Crown Fire Formulas
+
+In order to incorporate the effects of crown fire behavior,
+Pyretechnics includes the crown fire initiation routine from Van
+Wagner 1977.\citep{VanWagner1977} According to this approach, there
+are two threshold values (/critical intensity/ and /critical spread
+rate/) that must be calculated in order to determine whether a fire
+will become an active or passive crown fire or simply remain a surface
+fire. The formulas for these thresholds are as follows:
+
+\begin{align*}
+  H &= 460 + 2600 M^{f} \\
+  I^{*} &= (0.01 \, Z_{b} \, H)^{1.5} \\
+  R^{*} &= \frac{3.0}{B_{m}}
+\end{align*}
+
+where $H$ is the heat of ignition for the herbaceous material in the
+canopy in kJ/kg, $M^{f}$ is the foliar moisture content in lb
+moisture/lb ovendry weight, $Z_{b}$ is the canopy base height in
+meters, $I^{*}$ is the critical intensity in kW/m, $B_{m}$ is the
+crown bulk density in kg/m^{3}, and $R^{*}$ is the critical spread
+rate in m/min.
+
+If the canopy cover is greater than 40% and the surface fire line
+intensity is greater than the critical intensity ($I > I^{*}$), then
+crown fire initiation occurs.
+
+#+name: van-wagner-crown-fire-initiation
+#+begin_src python :tangle ../src/pyretechnics/crown_fire.py
+from conversion import ft2m, dec2percent, Btu_ft_s2kW_m
+
+def van_wagner_critical_fire_line_intensity(canopy_base_height, foliar_moisture):
+    """
+    Ouputs the critical fire line intensity (kW/m) using:
+    - canopy_base_height (m)
+    - foliar_moisture (0-100 %)
+
+    Constants used:
+    460.0 = heat-of-ignition (kJ/kg)
+    0.01 = empirical estimate for C in eq. 4
+    """
+    return ((foliar_moisture * 26.0 + 460.0) * 0.01 * canopy_base_height) ** 1.5
+
+
+def van_wagner_crown_fire_initiation_metric(canopy_cover, canopy_base_height, foliar_moisture, fire_line_intensity):
+    """
+    - canopy_cover (0-100 %)
+    - canopy_base_height (m)
+    - foliar_moisture (0-100 %)
+    - fire_line_intensity (kW/m)
+    """
+    return ((canopy_cover > 40.0)
+            and
+            (fire_line_intensity > 0.0)
+            and
+            (canopy_base_height > 0.0)
+            and
+            (fire_line_intensity >= van_wagner_critical_fire_line_intensity(canopy_base_height, foliar_moisture)))
+
+
+# NOTE: Name changed
+def van_wagner_crown_fire_initiation(canopy_cover, canopy_base_height, foliar_moisture, fire_line_intensity):
+    """
+    - canopy_cover (0-100 %)
+    - canopy_base_height (ft)
+    - foliar_moisture (0-1)
+    - fire_line_intensity (Btu/ft*s)
+    """
+    return van_wagner_crown_fire_initiation_metric(canopy_cover,
+                                                   ft2m(canopy_base_height),
+                                                   dec2percent(foliar_moisture),
+                                                   Btu_ft_s2kW_m(fire_line_intensity))
+#+end_src
+
+If crowning occurs, then the active and passive crown fire spread
+rates are calculated from the formulas given in Cruz
+2005.\citep{Cruz2005}
+
+\begin{align*}
+  \textrm{CROS}_{A} &= 11.02 \> U_{10m}^{0.90} \> B_{m}^{0.19} \> e^{-0.17 \, \textrm{EFFM}} \\
+  \textrm{CROS}_{P} &= \textrm{CROS}_{A} \> e^{\frac{-\textrm{CROS}_{A}}{R^{*}}}
+\end{align*}
+
+where $\textrm{CROS}_{A}$ is the active crown fire spread rate in
+m/min, $U_{10m}$ is the 10 meter windspeed in km/hr, $B_{m}$ is the
+crown bulk density in kg/m^{3}, EFFM is the estimated fine fuel
+moisture as a percent (0-100), and $\textrm{CROS}_{P}$ is the passive
+crown fire spread rate in m/min.
+
+If the active crown fire spread rate is greater than the critical
+spread rate ($\textrm{CROS}_{A} > R^{*}$), then the crown fire will be
+active, otherwise passive.
+
+#+name: cruz-crown-fire-spread
+#+begin_src python :tangle ../src/pyretechnics/crown_fire.py
+from convert import m2ft, mph2km_hr, wind_speed_20ft2wind_speed_10m, lb_ft32kg_m3, dec2percent
+from math import exp
+
+def cruz_active_crown_fire_spread(wind_speed_10m, crown_bulk_density, estimated_fine_fuel_moisture):
+    """
+    Returns active spread-rate in m/min given:
+    - wind_speed_10m (km/hr)
+    - crown_bulk_density (kg/m^3)
+    - estimated_fine_fuel_moisture (0-100 %)
+    """
+    return (11.02
+            ,* (wind_speed_10m ** 0.90)
+            ,* (crown_bulk_density ** 0.19)
+            ,* exp(-0.17 * estimated_fine_fuel_moisture))
+
+
+def cruz_passive_crown_fire_spread(active_spread_rate, critical_spread_rate):
+    """
+    Returns passive spread-rate in m/min given:
+    - active_spread_rate (m/min)
+    - critical_spread_rate (m/min)
+    """
+    return active_spread_rate * exp(-1.0 * active_spread_rate / critical_spread_rate)
+
+
+def cruz_crown_fire_spread_metric(wind_speed_10m, crown_bulk_density, estimated_fine_fuel_moisture):
+    """
+    Returns spread-rate in m/min given:
+    - wind_speed_10m (km/hr)
+    - crown_bulk_density (kg/m^3)
+    - estimated_fine_fuel_moisture (M_f[0] "dead-1hr") (0-100 %)
+    NOTE: A positive spread-rate indicates active crowning.
+          A negative spread-rate indicates passive crowning.
+    """
+    active_spread_rate   = cruz_active_crown_fire_spread(wind_speed_10m,
+                                                         crown_bulk_density,
+                                                         estimated_fine_fuel_moisture)
+    critical_spread_rate = 3.0 / crown_bulk_density # m/min
+    if (active_spread_rate > critical_spread_rate):
+        return active_spread_rate
+    else:
+        # NOTE: Use minus as passive flag
+        return -1.0 * cruz_passive_crown_fire_spread(active_spread_rate, critical_spread_rate)
+
+
+def cruz_crown_fire_spread(wind_speed_20ft, crown_bulk_density, estimated_fine_fuel_moisture):
+    """
+    Returns spread-rate in ft/min given:
+    - wind_speed_20ft (mph)
+    - crown_bulk_density (lb/ft^3)
+    - estimated_fine_fuel_moisture (M_f[0] "dead-1hr") (0-1)
+    NOTE: A positive spread-rate indicates active crowning.
+          A negative spread-rate indicates passive crowning.
+    """
+    return m2ft(
+        cruz_crown_fire_spread_metric(
+            wind_speed_20ft2wind_speed_10m(mph2km_hr(wind_speed_20ft)),
+            lb_ft32kg_m3(crown_bulk_density),
+            dec2percent(estimated_fine_fuel_moisture)))
+#+end_src
+
+Once the crown fire spread rate is determined, the crown fire line
+intensity and flame lengths may be derived using the following
+formulas:
+
+\begin{align*}
+  I_{c} &= \frac{R_{c} B (Z - Z_{b}) h}{60} \\
+  L_{c} &= 0.45(I + I_{c})^{0.46}
+\end{align*}
+
+where $I_{c}$ is the crown fire line intensity in Btu/ft/s, $R_{c}$ is
+the crown fire spread rate (either $\textrm{CROS}_{A}$ or
+$\textrm{CROS}_{P}$) in ft/min, $B$ is the crown bulk density in
+lb/ft^{3}, $Z$ is the canopy height in ft, $Z_{b}$ is the canopy base
+height in ft, $h$ is the fuel model heat of combustion (generally 8000
+Btu/lb), $L_{c}$ is the crown flame length in ft, and $I$ is the
+surface fire line intensity in Btu/ft/s.
